--- a/RMStore.xcodeproj/xcshareddata/xcschemes/RMStore tvOS.xcscheme
+++ b/RMStore.xcodeproj/xcshareddata/xcschemes/RMStore tvOS.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0510"
+   LastUpgradeVersion = "0710"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "A0AF3D0717A802F300D2E836"
-               BuildableName = "libRMStore.a"
-               BlueprintName = "RMStore"
+               BlueprintIdentifier = "DD4F927D1C0F490800CDBF01"
+               BuildableName = "RMStore tvOS.framework"
+               BlueprintName = "RMStore tvOS"
                ReferencedContainer = "container:RMStore.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -27,26 +27,7 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
-      <PreActions>
-         <ExecutionAction
-            ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
-            <ActionContent
-               title = "Run Script"
-               scriptText = "# See: http://stackoverflow.com/questions/9996578/ocunit-tests-fail-from-the-command-line-but-work-in-xcode-when-using-keychain-se&#10;killall -9 &apos;iPhone Simulator&apos;">
-            </ActionContent>
-         </ExecutionAction>
-      </PreActions>
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "A0AF3D1817A802F300D2E836"
-               BuildableName = "RMStoreTests.xctest"
-               BlueprintName = "RMStoreTests"
-               ReferencedContainer = "container:RMStore.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
       <AdditionalOptions>
       </AdditionalOptions>
@@ -64,9 +45,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "A0AF3D0717A802F300D2E836"
-            BuildableName = "libRMStore.a"
-            BlueprintName = "RMStore"
+            BlueprintIdentifier = "DD4F927D1C0F490800CDBF01"
+            BuildableName = "RMStore tvOS.framework"
+            BlueprintName = "RMStore tvOS"
             ReferencedContainer = "container:RMStore.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -79,6 +60,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "DD4F927D1C0F490800CDBF01"
+            BuildableName = "RMStore tvOS.framework"
+            BlueprintName = "RMStore tvOS"
+            ReferencedContainer = "container:RMStore.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
